Update print pdf to remove repeated headers in order to avoid overlapping

--- a/public/css/print.css
+++ b/public/css/print.css
@@ -33,3 +33,4 @@ table{
 table, tr, td, th, tbody, thead, tfoot {
   page-break-inside: avoid !important;
 }
+thead { display: table-row-group; }
